# serverless-embassy-locator

./: .gitignore  Cargo.toml  README.md  create_access_point.sh  fetch.sh  infra.tf  init.sh  sync_to_s3.sh  template.yaml
clean_embassy/: Cargo.toml  README.md
clean_embassy/src/: main.rs
crawler-embassy/: Cargo.toml
crawler-embassy/src/: main.rs
crawler_embassy/: Cargo.toml  README.md
crawler_embassy/src/: main.rs
data/: README.md
filter_embassy/: Cargo.toml
filter_embassy/src/: main.rs
