[package]
name = "clean_embassy"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
slog.workspace = true
slog-async.workspace = true
slog-json.workspace = true
log.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }

aws_lambda_events = { version = "0.6.3", default-features = false, features = ["s3"] }
csv = "1.1.6"
serde = { version = "1.0.142"}
parquet = "19.0.0"
serde_json = "1.0.83"
bytes = "1.2.1"
chrono = "0.4.21"
arrow2 = { version = "0.13.1", features = ["io_parquet", "io_parquet_compression"] }
futures = "0.3.24"
