[package]
name = "crawler_embassy"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
slog.workspace = true
slog-async.workspace = true
slog-json.workspace = true
log.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }

aws_lambda_events = { version = "0.6.3", default-features = false }
serde = { version = "1.0.142"}
chrono = "0.4.21"
serde_json = "1.0.83"
reqwest = "0.11.12"

# https://github.com/sfackler/rust-openssl/issues/980
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-gnu using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-gnu.
vendored = ["openssl-sys/vendored"]
