[package]
name = "filter_embassy"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
slog.workspace = true
slog-async.workspace = true
slog-json.workspace = true
log.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }

lambda_http = { version = "0.6.0", default-features = false, features = ["apigw_http"] }
parquet = "21.0.0"
